Filled out basic Performance guidance